# backend

./: .gitignore  DOCS.md  EXPERIMENT_1_RESULTS.md  EXPERIMENT_GUIDE.md  EXPERIMENT_REPRODUCIBILITY.md  FEEDBACK_SYSTEM.md  LLM_DEBATE_MODULE.md  LLM_DEBATE_PRESENTATION.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  USAGE_GUIDE.md  config.py  main.py  pyproject.toml  quant.py  test_ollama.py  test_visualization.py  시연_대본.md
.claude/: settings.local.json
agents/: __init__.py  graph.py  prompts.py
app/: main.py
cli/: __init__.py  backtest_ui.py  dashboard.py  live_trading_ui.py  memory_ui.py  menu.py  system_check.py  visualization.py
db/: __init__.py  migrations.md  models.py  session.py
memory/: __init__.py  finmem_memory.py  redis_store.py
routers/: __init__.py  backtest.py  feedback.py  metrics.py  simulation.py
scripts/: README_ANALYSIS.md  analyze_collaboration_effect.py  analyze_experiments.py  analyze_learning_curve.py  analyze_results.py  check_memory.py  reset_memory.py  run_backtest.py  run_experiment1.py  run_experiments.py  run_live.py  run_simulation.py
services/: backtest.py  data_loader.py  feedback.py  feedback_scheduler.py  llm.py  metrics.py  simulation.py
tests/: __init__.py  test_backtest_point_stub.py  test_backtest_strategy.py  test_feedback.py  test_health.py  test_simulation_stub.py
